<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout  xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <include
        android:id="@+id/header_Main"
        layout="@layout/include_header"/>

    <LinearLayout
        android:id="@+id/ly_tab_bar"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:layout_alignParentBottom="true"
        android:background="@color/bg_white"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/tab_query"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/tab_background"
            android:drawablePadding="3dp"
            android:gravity="center"
            android:padding="5dp"
            android:text="@string/tab_query"
            android:textColor="@drawable/tab_text"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/tab_sale"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/tab_background"
            android:drawablePadding="3dp"
            android:gravity="center"
            android:padding="5dp"
            android:text="@string/tab_sale"
            android:textColor="@drawable/tab_text"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/tab_stock"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/tab_background"
            android:drawablePadding="3dp"
            android:gravity="center"
            android:padding="5dp"
            android:text="@string/tab_stock"
            android:textColor="@drawable/tab_text"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/tab_my"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/tab_background"
            android:drawablePadding="3dp"
            android:gravity="center"
            android:padding="5dp"
            android:text="@string/tab_my"
            android:textColor="@drawable/tab_text"
            android:textSize="16sp" />
        <TextView
            android:id="@+id/tab_information"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/tab_background"
            android:drawablePadding="3dp"
            android:gravity="center"
            android:padding="5dp"
            android:text="@string/tab_information"
            android:textColor="@drawable/tab_text"
            android:textSize="16sp" />
    </LinearLayout>

    <View
        android:id="@+id/div_tab_bar"
        android:layout_width="match_parent"
        android:layout_height="2px"
        android:layout_above="@id/ly_tab_bar"
        android:background="@color/bg_white" />

    <FrameLayout
        android:id="@+id/tab_content"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@id/div_tab_bar"
        android:layout_below="@id/header_Main" >
    </FrameLayout>

</RelativeLayout >