<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <include layout="@layout/include_header" />

    <ImageView
        android:id="@+id/login_img"
        android:layout_width="fill_parent"
        android:layout_height="300dp"
        android:contentDescription="@string/login_img"
        android:scaleType="fitXY"
        android:src="@drawable/icon" />

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp" >

        <TextView
            android:id="@+id/user"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:text="@string/user"
            android:textSize="25sp" />

        <EditText
            android:id="@+id/edit_user"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:background="@null"
            android:inputType="textNoSuggestions"
            android:layout_toRightOf="@id/user" />
    </RelativeLayout>

    <View
        style="@style/Line"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="10dp" />

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp" >

        <TextView
            android:id="@+id/password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:text="@string/password"
            android:textSize="25sp" />

        <EditText
            android:id="@+id/edit_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="5dp"
            android:layout_marginRight="10dp"
            android:background="@null"
            android:inputType="textNoSuggestions"
            android:layout_toRightOf="@id/password" />
    </RelativeLayout>
      <View
        style="@style/Line"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="10dp" />
    <Button 
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/login_btn"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="15dp"
        android:text="@string/login"
        android:textSize="20sp"
        android:textColor="#FFFFFF"
        style="@style/common_Button"/>

</LinearLayout>